# c64ai

./: LICENSE  README.md  SD Card Installation Guide.md
ask2ai/: ask2ai.ts  build.bat  build.sh  deno.json  gemini.ts
c64/: CMakeLists.txt  LICENSE  README  aimem.c  aimem.h  build.bat  build.sh  c64-ai.cfg  c64chat.c  c64dir.c  c64dir.h  c64mouse.c  c64mouse.h  c64sid.c  c64sid.h  charset.asm  crunch_with_exomizer.bat  defines.h  font.c  font.h  irq.asm  makefile  menu.asm  mousecursor.raw  mousecursor.spd  page.c  page.h  setupscreen.asm  sidfunc.asm  sprites.raw  sprites.spd  textbox.c  textbox.h  version.h  where is c64-up2400.ser.md  zxfonttr.ctm
c64/disk/: blank.d64
c64ai-stl/stl/: c64ai-bottom.stl  c64ai-foot.stl  c64ai-middle.stl  c64ai-pico-raf.stl  c64ai-top-led-button.stl  c64ai-top-shutdown.stl  c64ai-top.stl
help/: build.bat  help  help.txt  readme.txt
qrcode/: CMakeLists.txt  build.bat  c64aisetup.c  c64aisetup.s  makefile
server/: CMakeLists.txt  README  build.bat  build.sh  c64aiserver.c  makefile
services/: README
services/etc/: motd
services/etc/systemd/system/: c64aiserver.service  gpio-shutdown.service  setup.service
setup/: server.ts
setup/public/: index.html
shutdownled/: README.md  gpio_shutdown_led  gpio_shutdown_led.c  makefile
sid_reloc/sidreloc/: CMakeLists.txt  Makefile  README.md  err.h  sidreloc.c  solver.c
sid_reloc/sidreloc-gui/: README.md  build.bat  sidreloc-gui.cpp
